--- a/css/style.css
+++ b/css/style.css
@@ -1185,7 +1185,7 @@ main {
  */
 
 .error,
-.errorData,
+.data-error,
 .success {
   position: fixed;
   display: flex;
@@ -1202,7 +1202,7 @@ main {
 }
 
 .error__inner,
-.errorData__inner,
+.data-error__inner,
 .success__inner {
   position: relative;
   width: 600px;
@@ -1231,7 +1231,7 @@ main {
 }
 
 .error__title,
-.errorData__title {
+.data-error__title {
   position: relative;
 
   margin: 0;
@@ -1248,7 +1248,7 @@ main {
 }
 
 .error__title::before,
-.errorData__title::before{
+.data-error__title::before{
   content: "";
   position: absolute;
 
@@ -1266,7 +1266,7 @@ main {
 }
 
 .error__button,
-.errorData__button,
+.data-error__button,
 .success__button {
   padding: 5px 10px;
 
@@ -1280,15 +1280,15 @@ main {
 
 .error__button:hover,
 .error__button:focus,
-.errorData__button:hover,
-.errorData__button:focus,
+.data-error__button:hover,
+.data-error__button:focus,
 .success__button:hover,
 .success__button:focus {
   opacity: 0.8;
 }
 
 .error__button:active,
-.errorData__button:active,
+.data-error__button:active,
 .success__button:active {
   opacity: 0.6;
 }
